lab-01-yml-files/result/deployment-config.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  creationTimestamp: '2022-03-26T12:23:45Z'
  generation: 3
  name: result
  namespace: attin-studio
  resourceVersion: '629623'
  selfLink: /apis/apps.openshift.io/v1/namespaces/attin-studio/deploymentconfigs/result
  uid: 94a213c7-acff-11ec-a3e2-00155d630102
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    deploymentconfig: result
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: result
        deploymentconfig: result
    spec:
      containers:
        - env:
            - name: PORT
              value: '8080'
          image: >-
            172.30.1.1:5000/attin-studio/result@sha256:832264aed5c90cfc5f429c84ea13540237b717a1ef6407366024e494a4973a44
          imagePullPolicy: Always
          name: result
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
          - result
        from:
          kind: ImageStreamTag
          name: 'result:latest'
          namespace: attin-studio
        lastTriggeredImage: >-
          172.30.1.1:5000/attin-studio/result@sha256:832264aed5c90cfc5f429c84ea13540237b717a1ef6407366024e494a4973a44
      type: ImageChange
    - type: ConfigChange
status:
  availableReplicas: 1
  conditions:
    - lastTransitionTime: '2022-03-26T18:59:54Z'
      lastUpdateTime: '2022-03-26T18:59:54Z'
      message: Deployment config has minimum availability.
      status: 'True'
      type: Available
    - lastTransitionTime: '2022-03-26T18:59:55Z'
      lastUpdateTime: '2022-03-26T18:59:55Z'
      message: replication controller "result-1" successfully rolled out
      reason: NewReplicationControllerAvailable
      status: 'True'
      type: Progressing
  details:
    causes:
      - type: ConfigChange
    message: config change
  latestVersion: 1
  observedGeneration: 3
  readyReplicas: 1
  replicas: 1
  unavailableReplicas: 0
  updatedReplicas: 1
